2003-02-07  Stephane Carrez  <stcarrez@nerim.fr>

	* Makefile.am (SUBDIRS): Add examples.
	* Makefile.in: Generate.
	* configure.in: Configure example Makefile.
	* configure: Generate.

2003-02-02  Stephane Carrez  <stcarrez@nerim.fr>

	* bfdada/Makefile.in: Fix install.

2003-02-02  Stephane Carrez  <stcarrez@nerim.fr>

	* bfdada/testsuite/Makefile.in: Add -I$(srcdir) so that
	compiling in another directory is possible.
	* bfdada/Makefile.in: Likewise and cleanup

2003-02-02  Stephane Carrez  <stcarrez@nerim.fr>

	* bfdada/bfd-sections.ads: Remove Interfaces dependency.
	* bfdada/bfd-symtab.ads: Likewise.

2003-01-31  Stephane Carrez  <stcarrez@nerim.fr>

	* INSTALL: New file.
	* README: New file.

2003-01-26  Stephane Carrez  <stcarrez@nerim.fr>

	* bfdada/make_bfd.adb: New file to build the whole library with
	gnatmake (following GtkAda).
	* bfdada/Makefile.in: Use gnatmake to build (from GtkAda).

2003-01-25  Stephane Carrez  <stcarrez@nerim.fr>

	* aclocal.m4: Import from GtkAda-2.0.0
	* configure.in: Update.
	* configure: Rebuild.
	* NEWS: New file.
	* AUTHORS: New file.

2002-08-10  Stephane Carrez  <stcarrez@nerim.fr>

	* bfdada/bfd-thin.ads: New file to define C functions to import.
	* bfdada/bfd-thin-sections.ads: New file.
	* bfdada/bfd-thin-symtab.ads: New file.
	* bfdada/bfd.adb: Move imports to the Bfd.Thin package.
	* bfdada/bfd-sections.adb: Likewise.
	* bfdada/bfd-symtab.adb: Likewise.

2002-05-28  Stephane Carrez  <stcarrez@nerim.fr>

	* bfdada/testsuite/bfd-tests-sections.adb: New file.
	* bfdada/testsuite/bfd-tests-sections.ads: New file.

	* bfdada/testsuite/bfd_suite.adb: New file.
	* bfdada/testsuite/harness.adb: New file.
	* bfdada/testsuite/Makefile.in: Compile them.

2002-05-27  Stephane Carrez  <stcarrez@nerim.fr>

	* bfdada/testsuite/bfd-tests.ads: New file.
	* bfdada/testsuite/bfd-tests.adb: New file.
	* bfdada/testsuite/Makefile.in: Compile them.

2002-05-27  Stephane Carrez  <stcarrez@nerim.fr>
